# ai-coder-extends

./: .gitignore  .npmignore  INSTALLATION-GUIDE.md  INSTALLATION.md  QUICK-INSTALL.md  README-installation.md  README-nodejs.md  README.en.md  README.md  USAGE.md  ai-config-1.0.0.tgz  ai-config.bat  example-usage.js  install-from-github.js  install-global.js  install-global.py  install-local.js  install-nodejs-final.sh  install-nodejs-v2.sh  install-nodejs.sh  install-simple.js  install.py  install.sh  package.js  package.json  pyproject.toml  setup.py  test.js
.claude/: settings.local.json
ai_config_tool/: cli.py  constants.py  git_utils.py  sync.py
docs/: ai-config-requirements.md
remote-config/ai/.claude/: test-config.json
remote-config/ai/.cursor/: settings.json
src/: cli.ts  constants.ts
test-config/.claude/: settings.json
test-config/.cursor/: rules.json
